[package]
name = "cranky"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
description = "Library and tool for evaluating query effectiveness for information retrieval"
license = "MIT License (MIT)"
edition = "2018"
repository = "https://github.com/elshize/cranky"

[lib]
name = "cranky"
path = "src/lib.rs"

[dependencies]
failure = "0.1"
itertools = "0.8"
